# smaa-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: SECURITY.md
examples/: shader.wgsl  triangle.rs
src/: lib.rs  shader.rs
