[package]
name = "smaa"
version = "0.17.0"
description = "A library for post process antialiasing using SMAA"
repository = "https://github.com/fintelia/smaa-rs"
keywords = ["graphics", "antialiasing", "SMAA"]
categories = ["rendering", "game-engines"]
license = "MIT"
edition = "2021"
include = ["README.md", "LICENSE", "/src", "/third_party"]

[dependencies]
wgpu = { version = "27", features = ["glsl"] }

[dev-dependencies]
winit = "0.29"
futures = "0.3.30"
